--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,12 @@
         </plugins>
     </build>
 
-
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+    </dependencies>
 </project>
